syntax="proto3";

import "google/protobuf/empty.proto";

package services;
option go_package="./services";

service account_service{
  rpc GetAllAccount(google.protobuf.Empty) returns (AccountList);
  rpc GetAccount(AccountIdMessage) returns (AccountResponse);
  rpc CreateAccount(AccountRequest) returns (AccountResponse);
  rpc BanAccount(AccountIdMessage) returns (AccountResponse);
  rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordRes);
}

message ChangePasswordRes {
  string status = 1;
}

message ChangePasswordReq {
  uint64 account_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message AccountIdMessage {
  uint64 account_id = 1;
}

message AccountRequest {
 string username = 1;
 string email = 2;
 string password = 3;
}

message AccountResponse {
  uint64 account_id = 1;
  string player_id = 2;
  string username = 3;
  string email = 4;
  bool is_ban = 5;
  int64 created_at = 6;
}

message AccountList {
  repeated AccountResponse result = 1;
}
